--- a/app/src/main/res/layout/activity_view_all_streams.xml
+++ b/app/src/main/res/layout/activity_view_all_streams.xml
@@ -38,7 +38,7 @@
         <GridView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/gridview"
             android:layout_width="match_parent"
-            android:layout_height="450dp"
+            android:layout_height="wrap_content"
             android:columnWidth="90dp"
             android:gravity="center"
             android:horizontalSpacing="10dp"
