--- a/app/src/main/res/layout/activity_camera_preview.xml
+++ b/app/src/main/res/layout/activity_camera_preview.xml
@@ -21,7 +21,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/app_name"
-            android:textSize="32sp" />
+            android:textSize="40sp"
+            android:textColor="@color/red" />
 
         <FrameLayout
             android:id="@+id/camera_preview"
@@ -37,18 +38,37 @@
                 android:id="@+id/button_capture"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
                 android:text="Capture"
-
+                android:layout_weight="1"
                 />
 
             <Button
                 android:id="@+id/use_this"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="110dp"
+                android:layout_marginLeft="20dp"
                 android:clickable="false"
                 android:onClick="useThisPhoto"
-                android:text="Use this picture" />
+                android:text="Use this picture"
+                android:layout_weight="1"/>
         </LinearLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:onClick="viewAllStreams"
+            android:text="@string/view_streams" />
+
+        <Button
+            android:id="@+id/sign_out_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:text="Sign Out"
+            android:visibility="invisible" />
     </LinearLayout>
 </ScrollView>
