--- a/app/src/main/res/layout/activity_view_single_stream.xml
+++ b/app/src/main/res/layout/activity_view_single_stream.xml
@@ -24,18 +24,21 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/app_name"
-            android:textSize="32sp" />
+            android:textSize="40sp"
+            android:textColor="@color/red"/>
 
         <TextView
             android:id="@+id/stream_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:textSize="22sp" />
 
         <GridView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/gridview"
             android:layout_width="match_parent"
-            android:layout_height="390dp"
+            android:layout_height="320dp"
             android:columnWidth="90dp"
             android:gravity="center"
             android:horizontalSpacing="10dp"
@@ -54,12 +57,14 @@
             android:visibility="invisible" />
 
         <Button
+            android:id="@+id/upload_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
             android:onClick="uploadImage"
-            android:text="Upload a photo" />
+            android:text="Upload a photo"
+            android:visibility="invisible"/>
 
         <Button
             android:layout_width="match_parent"
@@ -68,5 +73,15 @@
             android:gravity="center"
             android:onClick="viewAllStreams"
             android:text="@string/view_streams" />
+
+        <Button
+            android:id="@+id/sign_out_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:text="Sign Out"
+            android:visibility="invisible" />
     </LinearLayout>
 </ScrollView>
